--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>PUDI CHARAN MANIKANTA REDDY - Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     body {
       font-family: 'Poppins', sans-serif;
@@ -96,15 +97,15 @@
       transform: translateY(-10px) rotateX(5deg);
       box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
     }
-    .skill-card {
+    .skill-card, .certification-card {
       background: linear-gradient(135deg, #e0e7ff, #c4b5fd);
       text-align: center;
       padding: 20px;
     }
-    .skill-card img {
-      width: 60px;
-      height: 60px;
+    .skill-card i, .certification-card i {
+      font-size: 60px;
       margin-bottom: 15px;
+      color: #1e3a8a;
     }
     .section-title {
       font-size: 2.5rem;
@@ -274,57 +275,96 @@
     </div>
   </section>
 
-  <!-- Skills -->
+  <!-- Skills & Certifications -->
   <section id="skills" class="container py-5 section">
     <h2 class="section-title">Skills & Certifications</h2>
-    <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 g-4">
+    <h3 class="text-center mb-4">Skills</h3>
+    <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 g-4 mb-5">
       <div class="col">
         <div class="skill-card card">
+          <i class="fab fa-python"></i>
           <h5 class="card-title">Python</h5>
           <p class="card-text text-muted">Proficient</p>
         </div>
       </div>
       <div class="col">
         <div class="skill-card card">
+          <i class="fab fa-java"></i>
           <h5 class="card-title">Java</h5>
           <p class="card-text text-muted">Proficient</p>
         </div>
       </div>
       <div class="col">
         <div class="skill-card card">
+          <i class="fas fa-code"></i>
           <h5 class="card-title">C</h5>
           <p class="card-text text-muted">Proficient</p>
         </div>
       </div>
       <div class="col">
         <div class="skill-card card">
+          <i class="fas fa-cog"></i>
           <h5 class="card-title">C++</h5>
           <p class="card-text text-muted">Proficient</p>
         </div>
       </div>
       <div class="col">
         <div class="skill-card card">
+          <i class="fab fa-html5"></i>
           <h5 class="card-title">HTML</h5>
           <p class="card-text text-muted">Proficient</p>
         </div>
       </div>
       <div class="col">
         <div class="skill-card card">
+          <i class="fab fa-js"></i>
           <h5 class="card-title">JavaScript</h5>
           <p class="card-text text-muted">Proficient</p>
         </div>
       </div>
       <div class="col">
         <div class="skill-card card">
+          <i class="fas fa-database"></i>
           <h5 class="card-title">DBMS</h5>
           <p class="card-text text-muted">Proficient</p>
         </div>
       </div>
       <div class="col">
         <div class="skill-card card">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRWEuZHwnSEbgi5aci1Y56ZVMFcaXnJ0PYdCg&s" alt="SQL">
+          <i class="fas fa-server"></i>
           <h5 class="card-title">SQL</h5>
           <p class="card-text text-muted">Proficient</p>
+        </div>
+      </div>
+    </div>
+    <h3 class="text-center mb-4">Certifications</h3>
+    <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 g-4">
+      <div class="col">
+        <div class="certification-card card">
+          <i class="fas fa-certificate"></i>
+          <h5 class="card-title">Python (HackerRank)</h5>
+          <p class="card-text text-muted">Certified</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="certification-card card">
+          <i class="fas fa-certificate"></i>
+          <h5 class="card-title">Java (HackerRank)</h5>
+          <p class="card-text text-muted">Certified</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="certification-card card">
+          <i class="fas fa-certificate"></i>
+          <h5 class="card-title">Responsive Web Design (freeCodeCamp)</h5>
+          <p class="card-text text-muted">Certified</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="certification-card card">
+          <i class="fas fa-certificate"></i>
+          <h5 class="card-title">SQL (HackerRank)</h5>
+          <p class="card-text text-muted">Certified</p>
         </div>
       </div>
     </div>
@@ -418,7 +458,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script>
-    // Add scrolled class to navbar on scroll (CSS-based fallback since no JS was requested, but minimal JS for navbar effect)
     window.addEventListener('scroll', () => {
       const navbar = document.querySelector('.navbar');
       if (window.scrollY > 50) {
