--- a/index.html
+++ b/index.html
@@ -107,6 +107,25 @@
       margin-bottom: 15px;
       color: #1e3a8a;
     }
+    .link-card {
+      background: #ffffff;
+      padding: 15px;
+      text-align: center;
+      border-radius: 10px;
+      transition: transform 0.3s, background 0.3s;
+    }
+    .link-card i {
+      font-size: 60px;
+      margin-bottom: 15px;
+      color: #1e3a8a;
+    }
+    .link-card:hover {
+      background: #7c3aed;
+      transform: scale(1.05);
+    }
+    .link-card:hover a, .link-card:hover i {
+      color: #fff;
+    }
     .section-title {
       font-size: 2.5rem;
       font-weight: 700;
@@ -124,20 +143,6 @@
       bottom: -10px;
       left: 50%;
       transform: translateX(-50%);
-    }
-    .link-card {
-      background: #ffffff;
-      padding: 15px;
-      text-align: center;
-      border-radius: 10px;
-      transition: transform 0.3s, background 0.3s;
-    }
-    .link-card:hover {
-      background: #7c3aed;
-      transform: scale(1.05);
-    }
-    .link-card:hover a {
-      color: #fff;
     }
     .project-card {
       background: #fff;
@@ -233,41 +238,49 @@
       <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 g-4">
         <div class="col">
           <div class="link-card card">
+            <i class="fab fa-github"></i>
             <a href="https://github.com/charan1736" target="_blank" class="text-primary text-decoration-none">GitHub</a>
           </div>
         </div>
         <div class="col">
           <div class="link-card card">
+            <i class="fab fa-linkedin"></i>
             <a href="https://linkedin.com/in/pudi-charan-manikanta-reddy-57722224b/" target="_blank" class="text-primary text-decoration-none">LinkedIn</a>
           </div>
         </div>
         <div class="col">
           <div class="link-card card">
+            <i class="fab fa-hackerrank"></i>
             <a href="https://www.hackerrank.com/profile/216K1A05A4" target="_blank" class="text-primary text-decoration-none">HackerRank</a>
           </div>
         </div>
         <div class="col">
           <div class="link-card card">
+            <i class="fas fa-code"></i>
             <a href="https://www.codechef.com/users/charan1736" target="_blank" class="text-primary text-decoration-none">CodeChef</a>
           </div>
         </div>
         <div class="col">
           <div class="link-card card">
+            <i class="fas fa-laptop-code"></i>
             <a href="https://leetcode.com/u/charan1736/" target="_blank" class="text-primary text-decoration-none">LeetCode</a>
           </div>
         </div>
         <div class="col">
           <div class="link-card card">
+            <i class="fab fa-salesforce"></i>
             <a href="https://www.salesforce.com/trailblazer/pudicharanmanikantareddy" target="_blank" class="text-primary text-decoration-none">Salesforce</a>
           </div>
         </div>
         <div class="col">
           <div class="link-card card">
+            <i class="fas fa-laptop-code"></i>
             <a href="https://www.freecodecamp.org/charan_1736" target="_blank" class="text-primary text-decoration-none">freeCodeCamp</a>
           </div>
         </div>
         <div class="col">
           <div class="link-card card">
+            <i class="fas fa-user-graduate"></i>
             <a href="https://unstop.com/u/pudiman2134" target="_blank" class="text-primary text-decoration-none">Unstop</a>
           </div>
         </div>
