--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         </div>
         <div class="col">
           <div class="link-card card">
-            <i class="fab fa-salesforce"></i>
+            <i class="fa-brands fa-salesforce"></i>"></i>
             <a href="https://www.salesforce.com/trailblazer/pudicharanmanikantareddy" target="_blank" class="text-primary text-decoration-none">Salesforce</a>
           </div>
         </div>
