--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
   <!-- Hero Section -->
   <section id="home" class="hero-section">
     <div class="hero-content">
-      <h1>Pudi Charan Manikanta Reddy</h1>
+      <h1>PUDI CHARAN MANIKANTA REDDY</h1>
       <p>Web Developer | Innovator | Engineering Undergrad</p>
       <a href="#about-me" class="btn btn-light hero-btn mx-2">Discover More</a>
       <a href="#projects" class="btn btn-outline-light hero-btn mx-2">View My Work</a>
@@ -402,6 +402,20 @@
             </ul>
           </div>
         </div>
+        <div class="col-12">
+  <div class="project-card card">
+    <h3 class="card-title">
+      <a href="https://charan1736.github.io/Library-Management-System/" target="_blank" class="text-primary text-decoration-none">Library Management System →</a>
+    </h3>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">Description: Developed a web-based library management system to streamline book borrowing, returning, and inventory management.</li>
+      <li class="list-group-item">Key Features: User authentication, book catalog with search functionality, borrowing/returning system, and admin dashboard.</li>
+      <li class="list-group-item">Tech Stack: HTML, CSS, JavaScript, Php, Mysql.</li>
+      <li class="list-group-item">Role: Database Design, Frontend Implementation.</li>
+      <li class="list-group-item">Skills Demonstrated: Database Management, User Interface Design.</li>
+    </ul>
+  </div>
+</div>
         <div class="col-12">
           <div class="project-card card">
             <h3 class="card-title">Simple Interest Calculator</h3>
