--- a/index.html
+++ b/index.html
@@ -307,6 +307,13 @@
           <p class="card-text text-muted">Proficient</p>
         </div>
       </div>
+       <div class="col">
+        <div class="skill-card card">
+          <i class="fa-brands fa-microsoft"></i>
+          <h5 class="card-title">Power-BI</h5>
+          <p class="card-text text-muted">Proficient</p>
+        </div>
+      </div>
       <div class="col">
         <div class="skill-card card">
           <i class="fas fa-code"></i>
@@ -318,6 +325,13 @@
         <div class="skill-card card">
           <i class="fas fa-cog"></i>
           <h5 class="card-title">C++</h5>
+          <p class="card-text text-muted">Proficient</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="skill-card card">
+          <i class="fa-brands fa-php"></i>
+          <h5 class="card-title">PHP</h5>
           <p class="card-text text-muted">Proficient</p>
         </div>
       </div>
