--- a/index.html
+++ b/index.html
@@ -326,70 +326,70 @@
         <div class="skill-card card">
           <i class="fab fa-python"></i>
           <h5 class="card-title">Python</h5>
-          <p class="card-text text-muted">Proficient</p>
+          <p class="card-text text-muted">Familiar</p>
         </div>
       </div>
       <div class="col">
         <div class="skill-card card">
           <i class="fab fa-java"></i>
           <h5 class="card-title">Java</h5>
-          <p class="card-text text-muted">Proficient</p>
+          <p class="card-text text-muted">Familiar</p>
         </div>
       </div>
       <div class="col">
         <div class="skill-card card">
           <i class="fa-brands fa-microsoft"></i>
           <h5 class="card-title">Power-BI</h5>
-          <p class="card-text text-muted">Proficient</p>
+          <p class="card-text text-muted">Familiar</p>
         </div>
       </div>
       <div class="col">
         <div class="skill-card card">
           <i class="fas fa-code"></i>
           <h5 class="card-title">C</h5>
-          <p class="card-text text-muted">Proficient</p>
+          <p class="card-text text-muted">Familiar</p>
         </div>
       </div>
       <div class="col">
         <div class="skill-card card">
           <i class="fas fa-cog"></i>
           <h5 class="card-title">C++</h5>
-          <p class="card-text text-muted">Proficient</p>
+          <p class="card-text text-muted">Familiar</p>
         </div>
       </div>
       <div class="col">
         <div class="skill-card card">
           <i class="fa-brands fa-php"></i>
           <h5 class="card-title">PHP</h5>
-          <p class="card-text text-muted">Proficient</p>
+          <p class="card-text text-muted">Familiar</p>
         </div>
       </div>
       <div class="col">
         <div class="skill-card card">
           <i class="fab fa-html5"></i>
           <h5 class="card-title">HTML</h5>
-          <p class="card-text text-muted">Proficient</p>
+          <p class="card-text text-muted">Familiar</p>
         </div>
       </div>
       <div class="col">
         <div class="skill-card card">
           <i class="fab fa-js"></i>
           <h5 class="card-title">JavaScript</h5>
-          <p class="card-text text-muted">Proficient</p>
+          <p class="card-text text-muted">Familiar</p>
         </div>
       </div>
       <div class="col">
         <div class="skill-card card">
           <i class="fas fa-database"></i>
           <h5 class="card-title">DBMS</h5>
-          <p class="card-text text-muted">Proficient</p>
+          <p class="card-text text-muted">Familiar</p>
         </div>
       </div>
       <div class="col">
         <div class="skill-card card">
           <i class="fas fa-server"></i>
           <h5 class="card-title">SQL</h5>
-          <p class="card-text text-muted">Proficient</p>
+          <p class="card-text text-muted">Familiar</p>
         </div>
       </div>
     </div>
